@@ -1,3 +1,5 @@
+12/3/10 change dev shape for E-Field probe origin from a red "+" to a red dot, to accommodate new angled crosshairs
+12/3/10 new E-Field Probe image: crosshair are angled, crosshairs are gray so they're visible on dense black E-field
 12/3/10 put "Material:" label to the left of combo box, instead of above
 # 0.00.51 (46753) Dec 2, 2010
 12/2/10 make battery slider tick marks a little longer so that they extend past the slider thumb
